--- a/extensions/chat-window/blocks/sherpa_window.liquid
+++ b/extensions/chat-window/blocks/sherpa_window.liquid
@@ -323,7 +323,7 @@
 
   <style>
     .closed-chat-btn {
-      background:url("{{ 'chat_icon.png' | asset_img_url: '1200x1200' }}") no-repeat center / contain;
+      background:url("{{ 'start_icon.png' | asset_img_url: '1200x1200' }}") no-repeat center / contain;
       width: 100px;
       background-position: top;
       height: 29px;
